# hyprPad

./: .gitignore  Cargo.toml  README.md  receiver
receiverF/: receiver.rs
src/: app.rs  gui.rs  hyprland.rs  main.rs  types.rs
src/capture/: encoder.rs  mod.rs  pipewire.rs  portal.rs
swift/: .gitignore  Package.swift  README.md  xtool.yml
swift/.build/: build.db  plugin-tools.yaml  workspace-state.json
swift/.build/arm64-apple-ios/debug/CRustCore.build/: CRustCore.c.d
swift/.build/arm64-apple-ios/debug/ModuleCache/: AVFAudio-287QW24YFQFD.swiftmodule  AVFoundation-Z73KWWJM3D3A.swiftmodule  Accessibility-3QPSP4YZY3T85.swiftmodule  AudioToolbox-1IK1QDJXUJO3Q.swiftmodule  Combine-3EKINWFVRGI3P.swiftmodule  CoreAudio-2FF5HNTFU8510.swiftmodule  CoreData-3CFI6F7CQDN9L.swiftmodule  CoreFoundation-33DK5JTFG11TZ.swiftmodule  CoreImage-1CON9RNWZEH9X.swiftmodule  CoreMIDI-36JYUCK0C6LDT.swiftmodule  CoreMedia-3538CTP23NBXZ.swiftmodule  CoreText-2IF0THJNFV0XU.swiftmodule  (+34 more)
swift/.build/index-build/: build.db  debug.yaml
swift/.build/x86_64-unknown-linux-gnu/debug/: plugin-tools-description.json
swift/Sources/CRustCore/: CRustCore.c
swift/Sources/CRustCore/include/: module.modulemap  rust_core.h
swift/Sources/hyprPadClient/: AppState.swift  ContentView.swift  H264Decoder.swift  StreamEngine.swift  VideoView.swift  hyprPadClientApp.swift
swift/rust_core/: Cargo.toml  cbindgen.toml
swift/rust_core/src/: lib.rs  parser.rs  ring.rs  stats.rs  udp.rs
swift/xtool/.xtool-tmp/: Package.swift
swift/xtool/hyprPadClient.app/: Info.plist  hyprPadClient
(+499 files in other folders)
