[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"
description = "Rust core voor hyprPadClient: UDP ontvangst, lock-free ring, Annex-B NALU parser"

[lib]
name = "rust_core"
crate-type = ["staticlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
